--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: var(--secondary-color);
+}
+
+:root{
+    --primary-color: rgb(55, 46, 136);
+    --secondary-color: rgb(230, 230, 230);    
+    --dark-primary-color: rgb(26, 21, 68);
 }
 
 button{
@@ -16,13 +23,8 @@ button{
 body {
     width: 100dvw;
     height: 100dvh;
-    background-color: rgb(55, 46, 136);
-    font-family: "Montserrat", sans-serif;
-}
-
-.background {
-    width: 100%;
-    height: 100%;
+    background-color: var(--primary-color);
+    font-family: "Montserrat", sans-serif;    
     padding: 80px;
     background-image: url("assets/backgroundMontanha.png");
     background-size: cover;
@@ -38,7 +40,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    //background-color: rgba(255, 255, 255, 0.8);
 }
 
 .menuBar {
@@ -49,14 +50,14 @@ body {
     gap: 40px;
 }
 
-.menuBar span {
+.menuBar a{
     font-size: 16px;
-    color: rgb(230, 230, 230);
     font-weight: 600;
     cursor: pointer;
+    text-decoration: none;
 }
 
-.menuBar span:hover {
+.menuBar a:hover {
     color: rgba(230, 230, 230, 0.49);
     transition: color 0.3s ease;
 }
@@ -74,7 +75,6 @@ body {
 
 .contentTitle{
     font-size: 1.4rem;
-    color: rgb(230, 230, 230);
     font-weight: 600;
 }
 
@@ -85,12 +85,10 @@ body {
     align-items: center;
     font-size: 4rem;
     font-weight: 600;
-    color: rgb(230, 230, 230); 
 }
 
 #btnContentLeft, #btnContentRight{
     font-size: 2rem;
-    color: rgb(230, 230, 230);
 }
 
 #btnContentLeft:hover, #btnContentRight:hover{
@@ -102,24 +100,22 @@ body {
     width: 100%;
     padding: 0 400px;
     text-align: center;
-    color: rgb(230, 230, 230);
 }
 
 .carroselBtnIndices button{
     font-size: 0.6rem;
     margin: 0 5px;
-    color: rgb(230, 230, 230);
 }
+
 #createAccount{
     padding: 15px 40px;
     border-radius: 25px;
-    background-color: rgb(29, 23, 85);
+    background-color: var(--dark-primary-color);
     font-size: 1rem;
-    color: rgb(230, 230, 230);
 }
 
 #createAccount:hover {
-    color: rgb(29, 23, 85);
+    color: var(--dark-primary-color);
     background-color: rgba(230, 230, 230, 0.57);    
     transition: 0.3s ease-in-out;
 }
